# esp-home-dashboard

./: Cargo.toml  README.md  build.rs
assets/icons/: 1bit_fantasy_pyairvander.raw  README.md  cloud.raw  cloud_moon.raw  cloud_sun.raw  cloud_wind.raw  cloud_wind_moon.raw  cloud_wind_sun.raw  clouds.raw  lightning.raw  moon.raw  rain0.raw  rain0_sun.raw  rain1.raw  rain1_moon.raw  rain1_sun.raw  rain2.raw  rain_lightning.raw  rain_snow.raw  snow.raw  snow_moon.raw  snow_sun.raw  sun.raw  wind.raw
src/: clock.rs  errors.rs  icons.rs  ics.rs  lib.rs  ntp.rs  todo.rs  ui.rs  weather.rs  wifi.rs
